# src/main/resources/openapi.yaml
@@ -9,13 +9,28 @@ paths:
   /movies:
     get:
       summary: Get all movies
+      parameters:
+        - in: query
+          name: page
+          schema:
+            type: integer
+            default: 0
+            description: Page number
+          required: false
+        - in: query
+          name: size
+          schema:
+              type: integer
+              default: 20
+              description: Page size
+          required: false
       responses:
         200:
           description: All movies
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/MovieList"
+                $ref: "#/components/schemas/MoviePage"
     post:
       summary: Create a new movie(admin only)
       requestBody:
@@ -196,7 +211,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/MovieList"
+                $ref: "#/components/schemas/MoviePage"
 
   /upload-movies:
     post:
@@ -273,19 +288,30 @@ components:
         properties:
           userId:
             type: integer
+            format: int64
           movieId:
             type: integer
+            format: int64
           rating:
-            type: integer
+            type: number
+            format: double
+        required:
+          - userId
+          - movieId
+          - rating
+
     User:
       type: object
       properties:
         id:
           type: integer
+          format: int64
         username:
           type: string
-        email:
-          type: string
+      required:
+        - username
+        - id
+
     UserList:
       type: array
       items:
@@ -294,6 +320,9 @@ components:
     MovieCreate:
       type: object
       properties:
+        id:
+          type: integer
+          format: int64
         title:
           type: string
         description:
@@ -304,11 +333,16 @@ components:
             type: string
       required:
         - title
+        - description
+        - genres
+        - id
+
     Movie:
       type: object
       properties:
         id:
           type: integer
+          format: int64
         title:
           type: string
         description:
@@ -317,10 +351,34 @@ components:
           type: array
           items:
             type: string
-    MovieList:
-      type: array
-      items:
-        $ref: "#/components/schemas/Movie"
+      required:
+        - title
+        - description
+        - genres
+        - id
+
+    MoviePage:
+      type: object
+      properties:
+        content:
+          type: array
+          items:
+            $ref: "#/components/schemas/Movie"
+        totalPages:
+          type: integer
+        totalElements:
+          type: integer
+        size:
+          type: integer
+        number:
+          type: integer
+      required:
+        - content
+        - totalPages
+        - totalElements
+        - size
+        - number
+
     Error:
       type: object
       properties:
@@ -328,6 +386,8 @@ components:
           type: integer
         message:
           type: string
+
+
     UploadResponse:
       type: object
       properties:
